--- a/a1_emails.html
+++ b/a1_emails.html
@@ -1,208 +1,41 @@
 <!DOCTYPE html>
-<html lang="ar">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>📧 إيميلات ألمانية مترجمة</title>
-<style>
-   body {
-     font-family: Arial, sans-serif;
-     line-height: 1.8;
-     margin: 0;
-     padding: 0;
-     background: #f5f6fa;
-     direction: rtl;
-   }
-   header {
-     background: #2d3436;
-     color: white;
-     padding: 20px;
-     text-align: center;
-     font-size: 22px;
-   }
-   .accordion {
-     background: #0984e3;
-     color: white;
-     cursor: pointer;
-     padding: 15px;
-     width: 100%;
-     border: none;
-     text-align: right;
-     outline: none;
-     font-size: 18px;
-     transition: 0.4s;
-     margin-top: 5px;
-   }
-   .active, .accordion:hover {
-     background: #74b9ff;
-   }
-   .panel {
-     padding: 0 20px;
-     display: none;
-     background: white;
-     overflow: hidden;
-     border: 1px solid #dcdde1;
-   }
-   .email-box {
-     background: #f1f2f6;
-     padding: 15px;
-     margin: 15px 0;
-     border-radius: 8px;
-     border: 1px solid #dcdde1;
-   }
-   .email-title {
-     font-weight: bold;
-     margin-bottom: 10px;
-     color: #2d3436;
-   }
-   .german {
-     color: #0984e3;
-     font-size: 17px;
-     white-space: pre-line;
-   }
-   .arabic {
-     color: #2d3436;
-     font-size: 16px;
-     margin-top: 8px;
-     white-space: pre-line;
-   }
-   .reason {
-     font-size: 14px;
-     color: #636e72;
-     margin-top: 6px;
-   }
-</style>
-</head>
-<body>
-<header>📧 إيميلات ألمانية مترجمة – مستوى A1</header>
-<!-- A1 Section -->
-<button class="accordion">📘 مستوى A1 (30 إيميل)</button>
-<div class="panel">
-<!-- Email 1 -->
-<div class="email-box">
-<div class="email-title">✉️ إيميل 1</div>
-<div class="german">
-       Hallo Peter,  
-       wie geht es dir? Ich hoffe, es geht dir gut. Ich schreibe dir, weil ich dich nächste Woche besuchen möchte. Hast du am Samstag Zeit? Wir können zusammen Kaffee trinken und spazieren gehen. Bitte sag mir, ob es dir passt.  
-       Viele Grüße  
-       Anna
-</div>
-<div class="arabic">
-       مرحبًا بيتر،  
-       كيف حالك؟ أتمنى أن تكون بخير. أكتب لك لأنني أود زيارتك الأسبوع القادم. هل لديك وقت يوم السبت؟ يمكننا شرب القهوة معًا والذهاب في نزهة. من فضلك أخبرني إذا كان يناسبك.  
-       مع أطيب التحيات  
-       آنا
-</div>
-<div class="reason">
-       📌 سبب الكتابة:  
-       - السؤال عن الحال  
-       - اقتراح لقاء  
-       - تحديد موعد  
-       - انتظار الرد
-</div>
-</div>
-<!-- Email 2 -->
-<div class="email-box">
-<div class="email-title">✉️ إيميل 2</div>
-<div class="german">
-       Liebe Maria,  
-       danke für deine Einladung zu deiner Geburtstagsparty. Ich freue mich sehr darauf. Soll ich etwas mitbringen? Vielleicht einen Kuchen oder Getränke? Bitte sag mir, was du brauchst. Ich komme am Freitag um 18 Uhr.  
-       Herzliche Grüße  
-       Thomas
-</div>
-<div class="arabic">
-       عزيزتي ماريا،  
-       شكرًا لدعوتك إلى حفلة عيد ميلادك. أنا متحمس جدًا لذلك. هل يجب أن أحضر شيئًا؟ ربما كعكة أو مشروبات؟ من فضلك قولي لي ما تحتاجينه. سأصل يوم الجمعة الساعة 6 مساءً.  
-       أطيب التحيات  
-       توماس
-</div>
-<div class="reason">
-       📌 سبب الكتابة:  
-       - شكر على الدعوة  
-       - عرض المساعدة  
-       - تحديد الموعد
-</div>
-</div>
-<!-- Email 3 … Email 30 (نفس النمط) -->
-<div class="email-box">
-<div class="email-title">✉️ إيميل 3</div>
-<div class="german">
-       Hallo Julia,  
-       ich möchte dir sagen, dass ich morgen nicht zur Schule kommen kann. Ich habe einen Arzttermin und muss den ganzen Vormittag dort bleiben. Kannst du mir bitte die Hausaufgaben schicken? Das wäre sehr nett von dir.  
-       Viele Grüße  
-       Max
-</div>
-<div class="arabic">
-       مرحبًا جوليا،  
-       أريد أن أخبرك أنني لن أستطيع الحضور إلى المدرسة غدًا. لدي موعد عند الطبيب ويجب أن أبقى هناك طوال الصباح. هل يمكنك أن ترسلي لي الواجبات المنزلية من فضلك؟ سيكون ذلك لطفًا منك.  
-       مع تحياتي  
-       ماكس
-</div>
-<div class="reason">
-       📌 سبب الكتابة:  
-       - إعلام بعدم الحضور  
-       - الاعتذار  
-       - طلب مساعدة
-</div>
-</div>
-<!-- ✨ سنكمل بنفس النمط حتى 30 إيميل لمستوى A1 -->
-</div>
-<script>
-   var acc = document.getElementsByClassName("accordion");
-   for (var i = 0; i < acc.length; i++) {
-     acc[i].addEventListener("click", function() {
-       this.classList.toggle("active");
-       var panel = this.nextElementSibling;
-       if (panel.style.display === "block") {
-         panel.style.display = "none";
-       } else {
-         panel.style.display = "block";
-       }
-     });
-   }
-</script>
-</body>
-</html>
-<!DOCTYPE html>
 <html lang="de">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>A1 Emails</title>
+<title>Deutsch A1 - E-Mails</title>
 <style>
    body {
      font-family: Arial, sans-serif;
-     background: #f9f9f9;
-     margin: 0;
-     padding: 0;
      line-height: 1.8;
+     padding: 20px;
+     background: #f9f9f9;
+     color: #333;
    }
-   header {
-     background: #4CAF50;
-     color: white;
+   h1 {
      text-align: center;
-     padding: 15px;
-     font-size: 1.8em;
+     color: #0044cc;
    }
    .email {
-     background: white;
-     margin: 15px auto;
-     padding: 20px;
+     background: #fff;
+     border: 1px solid #ddd;
      border-radius: 8px;
+     padding: 15px;
+     margin: 20px auto;
      max-width: 800px;
-     box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
    }
    .reason {
      font-weight: bold;
-     color: #333;
+     color: #555;
      margin-bottom: 10px;
    }
    .german {
-     background: #eef7ff;
+     background: #eef5ff;
      padding: 10px;
      border-radius: 5px;
      margin-bottom: 10px;
-     white-space: pre-line;
+     white-space: pre-wrap;
    }
    .arabic {
      background: #fff8e1;
@@ -210,157 +43,207 @@
      border-radius: 5px;
      direction: rtl;
      text-align: right;
-     white-space: pre-line;
+     white-space: pre-wrap;
    }
 </style>
 </head>
 <body>
-<header>📧 إيميلات المستوى A1</header>
+<h1>📧 E-Mails A1 – مستوى A1</h1>
+<!-- 1 -->
 <div class="email">
-<div class="reason">✍️ سبب الكتابة: دعوة صديق لحفلة عيد ميلاد</div>
+<div class="reason">تهنئة صديق بعيد ميلاده 🎂</div>
 <div class="german">
-     Hallo Maria,  
-     ich möchte dich zu meiner Geburtstagsfeier am Samstag einladen. Die Feier beginnt um 18 Uhr bei mir zu Hause. Es wird Essen, Getränke und Musik geben. Ich freue mich, wenn du kommst. Bitte sag mir Bescheid, ob du Zeit hast. Es wird bestimmt ein schöner Abend mit vielen Freunden. Bring gerne gute Laune mit! Ich hoffe, du kannst kommen. Bis bald!  
-     Viele Grüße  
-     Anna
+Hallo Anna,  
+alles Gute zum Geburtstag! Ich hoffe, du hast einen schönen Tag mit deiner Familie und Freunden.  
+Ich wünsche dir Gesundheit, Glück und Erfolg für das neue Jahr.  
+Viele Grüße,  
+Maria
 </div>
 <div class="arabic">
-     مرحباً ماريا،  
-     أود أن أدعوك إلى حفلة عيد ميلادي يوم السبت. ستبدأ الحفلة في الساعة السادسة مساءً في بيتي. سيكون هناك طعام، مشروبات وموسيقى. سأكون سعيدة إذا حضرتِ. من فضلك أخبريني إذا كان لديك وقت. سيكون بالتأكيد مساءً جميلاً مع الكثير من الأصدقاء. أحضري معك روحاً مرحة! آمل أن تتمكني من الحضور. إلى اللقاء!  
-     تحياتي  
-     آنا
+مرحباً آنا،  
+عيد ميلاد سعيد! أتمنى أن يكون لديك يوم جميل مع عائلتك وأصدقائك.  
+أتمنى لك الصحة والسعادة والنجاح في السنة الجديدة.  
+تحياتي،  
+ماريا
 </div>
 </div>
+<!-- 2 -->
 <div class="email">
-<div class="reason">✍️ سبب الكتابة: الاعتذار عن عدم الحضور</div>
+<div class="reason">شكر صديق على المساعدة 🙏</div>
 <div class="german">
-     Hallo Thomas,  
-     vielen Dank für deine Einladung zum Abendessen. Leider kann ich am Freitag nicht kommen, weil ich arbeiten muss. Es tut mir sehr leid. Ich hoffe, wir können uns bald an einem anderen Tag treffen. Vielleicht nächste Woche? Ich freue mich darauf, dich bald wiederzusehen.  
-     Viele Grüße  
-     Peter
+Hallo Peter,  
+vielen Dank für deine Hilfe gestern! Ohne dich hätte ich die Aufgabe nicht geschafft.  
+Es war sehr nett von dir.  
+Bis bald!  
+Dein Freund,  
+Ali
 </div>
 <div class="arabic">
-     مرحباً توماس،  
-     شكراً جزيلاً على دعوتك للعشاء. للأسف لا أستطيع الحضور يوم الجمعة لأن عليّ أن أعمل. أنا آسف جداً. آمل أن نتمكن من اللقاء قريباً في يوم آخر. ربما الأسبوع القادم؟ أتطلع إلى رؤيتك قريباً.  
-     تحياتي  
-     بيتر
+مرحباً بيتر،  
+شكراً جزيلاً على مساعدتك بالأمس! بدونك ما كنت لأستطيع إنهاء المهمة.  
+لقد كان ذلك لطيفاً جداً منك.  
+أراك قريباً!  
+صديقك،  
+علي
 </div>
 </div>
+<!-- 3 -->
 <div class="email">
-<div class="reason">✍️ سبب الكتابة: تهنئة صديق بالنجاح</div>
+<div class="reason">دعوة صديق للغداء 🍽️</div>
 <div class="german">
-     Liebe Julia,  
-     herzlichen Glückwunsch zu deiner Prüfung! Ich habe gehört, dass du sehr gute Noten bekommen hast. Ich freue mich so sehr für dich. Du hast viel gelernt und jetzt siehst du, dass es sich gelohnt hat. Bald sollten wir feiern! Hast du am Wochenende Zeit? Ich lade dich gern auf einen Kaffee ein.  
-     Liebe Grüße  
-     Laura
+Hallo Julia,  
+hast du morgen Zeit zum Mittagessen? Ich möchte dich gern ins neue Café einladen.  
+Es ist sehr gemütlich dort.  
+Sag mir bitte Bescheid.  
+Liebe Grüße,  
+Sami
 </div>
 <div class="arabic">
-     عزيزتي جوليا،  
-     ألف مبروك على نجاحك في الامتحان! سمعت أنك حصلتِ على درجات جيدة جداً. أنا سعيدة جداً من أجلك. لقد درستِ كثيراً، والآن ترين أن الجهد قد أثمر. يجب أن نحتفل قريباً! هل لديك وقت في عطلة نهاية الأسبوع؟ سأدعوكي بكل سرور على فنجان قهوة.  
-     مع تحياتي  
-     لورا
+مرحباً جوليا،  
+هل لديك وقت غداً لتناول الغداء؟ أود دعوتك إلى المقهى الجديد.  
+إنه مريح جداً هناك.  
+أخبريني من فضلك.  
+مع تحياتي،  
+سامي
 </div>
 </div>
-<<!DOCTYPE html>
-<html lang="de">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>A1 Emails</title>
-<style>
-   body {
-     font-family: Arial, sans-serif;
-     background: #f9f9f9;
-     margin: 0;
-     padding: 0;
-     line-height: 1.8;
-   }
-   header {
-     background: #4CAF50;
-     color: white;
-     text-align: center;
-     padding: 15px;
-     font-size: 1.8em;
-   }
-   .email {
-     background: white;
-     margin: 15px auto;
-     padding: 20px;
-     border-radius: 8px;
-     max-width: 800px;
-     box-shadow: 0 2px 6px rgba(0,0,0,0.15);
-   }
-   .reason {
-     font-weight: bold;
-     color: #333;
-     margin-bottom: 10px;
-   }
-   .german {
-     background: #eef7ff;
-     padding: 10px;
-     border-radius: 5px;
-     margin-bottom: 10px;
-     white-space: pre-line;
-   }
-   .arabic {
-     background: #fff8e1;
-     padding: 10px;
-     border-radius: 5px;
-     direction: rtl;
-     text-align: right;
-     white-space: pre-line;
-   }
-</style>
-</head>
-<body>
-<header>📧 إيميلات المستوى A1</header>
+<!-- 4 -->
 <div class="email">
-<div class="reason">✍️ سبب الكتابة: دعوة صديق لحفلة عيد ميلاد</div>
+<div class="reason">طلب معلومات عن دورة لغة 📚</div>
 <div class="german">
-     Hallo Maria,  
-     ich möchte dich zu meiner Geburtstagsfeier am Samstag einladen. Die Feier beginnt um 18 Uhr bei mir zu Hause. Es wird Essen, Getränke und Musik geben. Ich freue mich, wenn du kommst. Bitte sag mir Bescheid, ob du Zeit hast. Es wird bestimmt ein schöner Abend mit vielen Freunden. Bring gerne gute Laune mit! Ich hoffe, du kannst kommen. Bis bald!  
-     Viele Grüße  
-     Anna
+Sehr geehrte Damen und Herren,  
+ich interessiere mich für Ihren Deutschkurs A1.  
+Können Sie mir bitte Informationen zu Terminen und Kosten schicken?  
+Vielen Dank im Voraus.  
+Mit freundlichen Grüßen,  
+Omar
 </div>
 <div class="arabic">
-     مرحباً ماريا،  
-     أود أن أدعوك إلى حفلة عيد ميلادي يوم السبت. ستبدأ الحفلة في الساعة السادسة مساءً في بيتي. سيكون هناك طعام، مشروبات وموسيقى. سأكون سعيدة إذا حضرتِ. من فضلك أخبريني إذا كان لديك وقت. سيكون بالتأكيد مساءً جميلاً مع الكثير من الأصدقاء. أحضري معك روحاً مرحة! آمل أن تتمكني من الحضور. إلى اللقاء!  
-     تحياتي  
-     آنا
+السادة المحترمون،  
+أنا مهتم بدورة اللغة الألمانية A1 الخاصة بكم.  
+هل يمكنكم من فضلكم إرسال معلومات عن المواعيد والتكاليف؟  
+شكراً جزيلاً مسبقاً.  
+مع أطيب التحيات،  
+عمر
 </div>
 </div>
+<!-- 5 -->
 <div class="email">
-<div class="reason">✍️ سبب الكتابة: الاعتذار عن عدم الحضور</div>
+<div class="reason">اعتذار عن عدم الحضور 😔</div>
 <div class="german">
-     Hallo Thomas,  
-     vielen Dank für deine Einladung zum Abendessen. Leider kann ich am Freitag nicht kommen, weil ich arbeiten muss. Es tut mir sehr leid. Ich hoffe, wir können uns bald an einem anderen Tag treffen. Vielleicht nächste Woche? Ich freue mich darauf, dich bald wiederzusehen.  
-     Viele Grüße  
-     Peter
+Hallo Thomas,  
+es tut mir leid, aber ich kann heute nicht zum Training kommen.  
+Ich habe Kopfschmerzen und bleibe zu Hause.  
+Bis nächste Woche!  
+Viele Grüße,  
+Nina
 </div>
 <div class="arabic">
-     مرحباً توماس،  
-     شكراً جزيلاً على دعوتك للعشاء. للأسف لا أستطيع الحضور يوم الجمعة لأن عليّ أن أعمل. أنا آسف جداً. آمل أن نتمكن من اللقاء قريباً في يوم آخر. ربما الأسبوع القادم؟ أتطلع إلى رؤيتك قريباً.  
-     تحياتي  
-     بيتر
+مرحباً توماس،  
+آسفة، لكن لا أستطيع حضور التدريب اليوم.  
+لدي صداع وسأبقى في البيت.  
+أراك الأسبوع القادم!  
+تحياتي،  
+نينا
 </div>
 </div>
+<!-- 6 -->
 <div class="email">
-<div class="reason">✍️ سبب الكتابة: تهنئة صديق بالنجاح</div>
+<div class="reason">طلب موعد عند الطبيب 🏥</div>
 <div class="german">
-     Liebe Julia,  
-     herzlichen Glückwunsch zu deiner Prüfung! Ich habe gehört, dass du sehr gute Noten bekommen hast. Ich freue mich so sehr für dich. Du hast viel gelernt und jetzt siehst du, dass es sich gelohnt hat. Bald sollten wir feiern! Hast du am Wochenende Zeit? Ich lade dich gern auf einen Kaffee ein.  
-     Liebe Grüße  
-     Laura
+Sehr geehrte Frau Doktor,  
+ich brauche einen Termin, weil ich seit zwei Tagen Halsschmerzen habe.  
+Haben Sie am Freitag Zeit?  
+Mit freundlichen Grüßen,  
+Layla
 </div>
 <div class="arabic">
-     عزيزتي جوليا،  
-     ألف مبروك على نجاحك في الامتحان! سمعت أنك حصلتِ على درجات جيدة جداً. أنا سعيدة جداً من أجلك. لقد درستِ كثيراً، والآن ترين أن الجهد قد أثمر. يجب أن نحتفل قريباً! هل لديك وقت في عطلة نهاية الأسبوع؟ سأدعوكي بكل سرور على فنجان قهوة.  
-     مع تحياتي  
-     لورا
+السيدة الدكتورة المحترمة،  
+أحتاج إلى موعد لأنني أعاني من التهاب حلق منذ يومين.  
+هل لديكم وقت يوم الجمعة؟  
+مع التحية،  
+ليلى
 </div>
 </div>
-<!-- باقي الإيميلات 4-10 أضيفها هنا بنفس التصميم -->
-</body>
-</html>>
+<!-- 7 -->
+<div class="email">
+<div class="reason">إرسال عنوان جديد 🏠</div>
+<div class="german">
+Hallo Paul,  
+ich bin umgezogen! Meine neue Adresse ist:  
+Berliner Straße 25, 12345 Berlin.  
+Bitte schreibe mir an diese Adresse.  
+Viele Grüße,  
+Hasan
+</div>
+<div class="arabic">
+مرحباً باول،  
+لقد انتقلت! عنواني الجديد هو:  
+شارع برلينر 25، 12345 برلين.  
+رجاءً راسلني على هذا العنوان.  
+تحياتي،  
+حسن
+</div>
+</div>
+<!-- 8 -->
+<div class="email">
+<div class="reason">حجز طاولة في مطعم 🍴</div>
+<div class="german">
+Sehr geehrtes Restaurant-Team,  
+ich möchte für Samstagabend um 19 Uhr einen Tisch für 4 Personen reservieren.  
+Bitte bestätigen Sie die Reservierung.  
+Mit freundlichen Grüßen,  
+Khaled
+</div>
+<div class="arabic">
+فريق المطعم المحترم،  
+أود حجز طاولة لأربعة أشخاص يوم السبت مساءً الساعة السابعة.  
+من فضلكم أكدوا الحجز.  
+مع التحية،  
+خالد
+</div>
+</div>
+<!-- 9 -->
+<div class="email">
+<div class="reason">شكر على دعوة 🎉</div>
+<div class="german">
+Liebe Sara,  
+danke für die Einladung zu deiner Party!  
+Ich komme sehr gern und bringe etwas zu essen mit.  
+Bis Samstag!  
+Liebe Grüße,  
+Fatima
+</div>
+<div class="arabic">
+عزيزتي سارة،  
+شكراً على دعوتك لحفلتك!  
+سأأتي بكل سرور وسأحضر معي بعض الطعام.  
+أراك يوم السبت!  
+تحياتي،  
+فاطمة
+</div>
+</div>
+<!-- 10 -->
+<div class="email">
+<div class="reason">سؤال عن أوقات القطار 🚆</div>
+<div class="german">
+Sehr geehrte Damen und Herren,  
+können Sie mir bitte sagen, wann der Zug von Berlin nach Hamburg fährt?  
+Ich möchte am Montagmorgen reisen.  
+Vielen Dank!  
+Mit freundlichen Grüßen,  
+Mahmoud
+</div>
+<div class="arabic">
+السادة المحترمون،  
+هل يمكنكم من فضلكم إخباري متى يغادر القطار من برلين إلى هامبورغ؟  
+أرغب بالسفر صباح الاثنين.  
+شكراً جزيلاً!  
+مع التحية،  
+محمود
+</div>
+</div>
+<!-- ✨ أوقفت عند الإيميل رقم 10 ✨ -->
+<!-- إذا أعجبك التصميم والاسلوب أكمل لك من 11 حتى 20 -->
 </body>
 </html>
