--- a/a1_emails.html
+++ b/a1_emails.html
@@ -222,6 +222,100 @@ Fatima
 تحياتي،  
 فاطمة
 </div>
+<!-- 1 -->
+<div class="email">
+<div class="reason">طلب معلومات عن دورة Deutsch 📚</div>
+<div class="german">
+Betreff: Informationen zum Deutschkurs  
+Sehr geehrte Damen und Herren,  
+ich möchte mein Deutsch verbessern und habe Ihren Kurs gesehen. Können Sie mir bitte die Kurszeiten, Preise und den Ort mitteilen? Gibt es auch Abendkurse?  
+Vielen Dank im Voraus.  
+Mit freundlichen Grüßen,  
+Ali Mustafa
+</div>
+<div class="arabic">
+الموضوع: معلومات عن دورة اللغة الألمانية  
+السادة الأعزاء،  
+أود تحسين لغتي الألمانية ورأيت دورتكم. هل يمكنكم تزويدي بمواعيد الدورة والأسعار والمكان؟ هل توجد دورات مسائية أيضاً؟  
+شكراً جزيلاً.  
+مع أطيب التحيات،  
+علي مصطفى
+</div>
+</div>
+<!-- 2 -->
+<div class="email">
+<div class="reason">استفسار عن تفاصيل الدورة ℹ️</div>
+<div class="german">
+Betreff: Deutschkurs Details  
+Sehr geehrte Damen und Herren,  
+ich interessiere mich für Ihren Deutschkurs. Können Sie mir bitte sagen, ob der Kurs online oder vor Ort ist und wie lange er dauert?  
+Vielen Dank.  
+Mit freundlichen Grüßen,  
+Fatima Alami
+</div>
+<div class="arabic">
+الموضوع: تفاصيل دورة اللغة الألمانية  
+السادة الأعزاء،  
+أنا مهتم بدورتكم للغة الألمانية. هل يمكنكم إعلامي إذا كانت الدورة عبر الإنترنت أم حضورية وكم مدة الدورة؟  
+شكراً لكم.  
+مع أطيب التحيات،  
+فاطمة العلمي
+</div>
+</div>
+<!-- 3 -->
+<div class="email">
+<div class="reason">طلب معلومات عن الأسعار والمواعيد 💰</div>
+<div class="german">
+Betreff: Anmeldung Deutschkurs  
+Sehr geehrte Damen und Herren,  
+ich möchte gerne mehr über Ihren Deutschkurs erfahren. Bitte senden Sie mir Informationen zu Preisen und Unterrichtszeiten.  
+Mit freundlichen Grüßen,  
+Omar Saleh
+</div>
+<div class="arabic">
+الموضوع: تسجيل في دورة ألمانية  
+السادة الأعزاء،  
+أود معرفة المزيد عن دورة اللغة الألمانية الخاصة بكم. يرجى إرسال معلومات عن الأسعار والمواعيد.  
+مع أطيب التحيات،  
+عمر صالح
+</div>
+</div>
+<!-- 4 -->
+<div class="email">
+<div class="reason">سؤال عن الدورات المسائية 🌙</div>
+<div class="german">
+Betreff: Frage zu Deutschkurs  
+Sehr geehrte Damen und Herren,  
+ich arbeite halbtags und suche einen Deutschkurs am Abend. Haben Sie solche Kurse? Bitte senden Sie mir Details.  
+Mit freundlichen Grüßen,  
+Hana Karim
+</div>
+<div class="arabic">
+الموضوع: سؤال عن دورة اللغة الألمانية  
+السادة الأعزاء،  
+أعمل نصف يوم وأبحث عن دورة مسائية لتعلم الألمانية. هل لديكم مثل هذه الدورات؟ يرجى إرسال التفاصيل.  
+مع أطيب التحيات،  
+هنا كريم
+</div>
+</div>
+<!-- 5 -->
+<div class="email">
+<div class="reason">استفسار عن مكان ومدة الدورة 📍⏳</div>
+<div class="german">
+Betreff: Deutschkurs Informationen  
+Sehr geehrte Damen und Herren,  
+ich interessiere mich für Ihren neuen Deutschkurs. Können Sie mir bitte sagen, wo der Kurs stattfindet und wie lange er dauert?  
+Mit freundlichen Grüßen,  
+Samir Nader
+</div>
+<div class="arabic">
+الموضوع: معلومات عن دورة اللغة الألمانية  
+السادة الأعزاء،  
+أنا مهتم بدورتكم الجديدة للغة الألمانية. هل يمكنكم تزويدي بمكان الدورة ومدة الدورة؟  
+مع أطيب التحيات،  
+سمير نادر
+</div>
+</div>
 </div>
 <!-- 10 -->
 <div class="email">
