--- a/a1_emails.html
+++ b/a1_emails.html
@@ -336,6 +336,114 @@ Mahmoud
 مع التحية،  
 محمود
 </div>
+<!-- 1 -->
+<div class="email">
+<div class="reason">مشاكل في الشقة – صيانة عاجلة 🏠🔧</div>
+<div class="german">
+Betreff: Dringende Reparatur in meiner Wohnung  
+Sehr geehrte Damen und Herren,  
+seit letzter Woche habe ich ein Problem mit der Heizung in meiner Wohnung. Die Heizkörper funktionieren nicht richtig, und es ist sehr kalt in allen Zimmern. Ich habe versucht, die Temperatur zu regulieren, aber ohne Erfolg. Könnten Sie bitte so schnell wie möglich einen Techniker schicken, um das Problem zu beheben? Außerdem habe ich ein kleines Leck im Badezimmer bemerkt, das möglicherweise das Wasser beschädigen könnte.  
+Vielen Dank für Ihre schnelle Hilfe.  
+Mit freundlichen Grüßen,  
+Ahmed Hassan
+</div>
+<div class="arabic">
+الموضوع: صيانة عاجلة في شقتي  
+السادة المحترمون،  
+منذ الأسبوع الماضي أواجه مشكلة في التدفئة بشقتي. المشعات لا تعمل بشكل صحيح، والجو بارد جداً في جميع الغرف. حاولت تعديل درجة الحرارة ولكن بدون جدوى. هل يمكنكم إرسال فني بأسرع وقت ممكن لإصلاح المشكلة؟  
+بالإضافة إلى ذلك، لاحظت تسريباً صغيراً في الحمام قد يتسبب في تلف المياه.  
+شكراً جزيلاً على مساعدتكم السريعة.  
+مع أطيب التحيات،  
+أحمد حسن
+</div>
+</div>
+<!-- 2 -->
+<div class="email">
+<div class="reason">طلب معلومات عن دورة لغة ألمانية 📚</div>
+<div class="german">
+Betreff: Informationen über Deutschkurs B1  
+Sehr geehrte Damen und Herren,  
+ich interessiere mich für Ihren Deutschkurs auf B1-Niveau. Ich möchte meine Sprachkenntnisse verbessern, besonders in der schriftlichen Kommunikation und beim Sprechen. Können Sie mir bitte Details über Kurszeiten, Dauer, Preise und Unterrichtsmethoden senden? Außerdem möchte ich wissen, ob es Online-Kurse gibt und wie viele Teilnehmer normalerweise in einer Gruppe sind. Über eine schnelle Antwort würde ich mich sehr freuen.  
+Vielen Dank im Voraus.  
+Mit freundlichen Grüßen,  
+Layla Ahmed
+</div>
+<div class="arabic">
+الموضوع: معلومات عن دورة اللغة الألمانية B1  
+السادة المحترمون،  
+أنا مهتم بدورة اللغة الألمانية لمستوى B1. أريد تحسين مهاراتي اللغوية، خاصة في الكتابة والتحدث. هل يمكنكم تزويدي بتفاصيل عن مواعيد الدورة، مدتها، الأسعار وطريقة التدريس؟  
+أود أيضاً معرفة ما إذا كانت هناك دورات أونلاين وعدد المشاركين عادةً في كل مجموعة.  
+سأكون ممتنًا لتلقي رد سريع.  
+شكراً جزيلاً مسبقاً.  
+مع أطيب التحيات،  
+ليلى أحمد
+</div>
+</div>
+<!-- 3 -->
+<div class="email">
+<div class="reason">شكوى عن ضوضاء الجيران 🎵</div>
+<div class="german">
+Betreff: Lärmbeschwerde von Nachbarn  
+Sehr geehrte Damen und Herren,  
+ich wohne in der Musterstraße 12, Wohnung 5, und habe seit einigen Wochen Probleme mit lauter Musik und Partys meiner Nachbarn. Die Geräusche beginnen oft am Abend und dauern bis spät in die Nacht. Das stört meinen Schlaf und meinen Alltag erheblich. Ich habe bereits versucht, das direkt mit den Nachbarn zu klären, aber leider ohne Erfolg. Könnten Sie bitte prüfen, welche Maßnahmen ergriffen werden können, um die Situation zu verbessern?  
+Vielen Dank für Ihre Unterstützung.  
+Mit freundlichen Grüßen,  
+Samir Nader
+</div>
+<div class="arabic">
+الموضوع: شكوى عن الضوضاء من الجيران  
+السادة المحترمون،  
+أقيم في شارع موستر رقم 12، شقة 5، ومنذ عدة أسابيع أواجه مشكلة مع الموسيقى الصاخبة والحفلات لدى جيراني. تبدأ الأصوات غالباً في المساء وتستمر حتى وقت متأخر من الليل. هذا يزعج نومي وحياتي اليومية بشكل كبير.  
+حاولت بالفعل حل المشكلة مباشرة مع الجيران، ولكن بدون جدوى. هل يمكنكم التحقق من الإجراءات الممكنة لتحسين الوضع؟  
+شكراً جزيلاً لدعمكم.  
+مع أطيب التحيات،  
+سمير نادر
+</div>
+</div>
+<!-- 4 -->
+<div class="email">
+<div class="reason">طلب موعد طبي عاجل 🏥</div>
+<div class="german">
+Betreff: Dringender Termin beim Arzt  
+Sehr geehrte Damen und Herren,  
+ich habe seit einigen Tagen starke Rückenschmerzen und fühle mich sehr unwohl. Ich möchte so schnell wie möglich einen Termin bei Dr. Müller vereinbaren. Bitte teilen Sie mir mit, ob heute oder morgen ein Termin möglich ist. Außerdem benötige ich Informationen, welche Unterlagen oder Tests ich zum Termin mitbringen soll. Ihre schnelle Rückmeldung wäre mir sehr wichtig, da die Schmerzen meine Arbeit und meinen Alltag stark beeinträchtigen.  
+Vielen Dank im Voraus.  
+Mit freundlichen Grüßen,  
+Hana Karim
+</div>
+<div class="arabic">
+الموضوع: موعد طبي عاجل  
+السادة المحترمون،  
+أعاني منذ عدة أيام من آلام شديدة في الظهر وأشعر بعدم راحة كبيرة. أود حجز موعد عاجل مع الدكتور مولر في أقرب وقت ممكن.  
+يرجى إعلامي إذا كان يمكن تحديد موعد اليوم أو غداً، وأي مستندات أو فحوصات يجب أن أحضرها معي.  
+ردكم السريع مهم جداً بالنسبة لي لأن الألم يؤثر بشكل كبير على عملي وحياتي اليومية.  
+شكراً جزيلاً مسبقاً.  
+مع أطيب التحيات،  
+هنا كريم
+</div>
+</div>
+<!-- 5 -->
+<div class="email">
+<div class="reason">طلب إصلاح الإنترنت المنزلي 🌐</div>
+<div class="german">
+Betreff: Störung des Internetanschlusses  
+Sehr geehrte Damen und Herren,  
+seit gestern funktioniert mein Internetanschluss nicht mehr. Ich habe bereits den Router neu gestartet und alle Kabel überprüft, aber das Problem besteht weiterhin. Da ich von zu Hause arbeite, ist ein funktionierender Internetanschluss sehr wichtig für mich. Könnten Sie bitte einen Techniker vorbeischicken oder mir mitteilen, welche Schritte ich noch unternehmen kann, um die Verbindung wiederherzustellen?  
+Vielen Dank für Ihre schnelle Hilfe.  
+Mit freundlichen Grüßen,  
+Mohamed Khalid
+</div>
+<div class="arabic">
+الموضوع: مشكلة في خدمة الإنترنت المنزلي  
+السادة المحترمون،  
+منذ يوم أمس لا يعمل اتصال الإنترنت في منزلي. لقد قمت بالفعل بإعادة تشغيل الراوتر وفحص جميع الكابلات، لكن المشكلة ما زالت قائمة.  
+بما أنني أعمل من المنزل، فإن وجود اتصال إنترنت فعال مهم جداً بالنسبة لي.  
+هل يمكنكم إرسال فني أو تزويدي بالخطوات التي يمكنني اتباعها لإعادة الاتصال؟  
+شكراً جزيلاً على مساعدتكم السريعة.  
+مع أطيب التحيات،  
+محمد خالد
+</div>
+</div>
 </div>
 <!-- ✨ أوقفت عند الإيميل رقم 10 ✨ -->
 <!-- إذا أعجبك التصميم والاسلوب أكمل لك من 11 حتى 20 -->
