--- a/a1_emails.html
+++ b/a1_emails.html
@@ -444,6 +444,112 @@ Mohamed Khalid
 محمد خالد
 </div>
 </div>
+<!-- 6 -->
+<div class="email">
+<div class="reason">طلب فتح حساب بنكي جديد 🏦</div>
+<div class="german">
+Betreff: Eröffnung eines neuen Bankkontos  
+Sehr geehrte Damen und Herren,  
+ich möchte ein neues Bankkonto bei Ihrer Bank eröffnen, um meine monatlichen Gehaltseingänge und Rechnungen zu verwalten. Bitte senden Sie mir Informationen über die verschiedenen Kontomodelle, Gebühren, Online-Banking-Möglichkeiten und erforderliche Dokumente. Ich würde auch gerne wissen, ob eine persönliche Beratung notwendig ist oder ob die Kontoeröffnung vollständig online erfolgen kann. Über eine detaillierte Antwort würde ich mich sehr freuen, damit ich die passende Option wählen kann.  
+Vielen Dank im Voraus.  
+Mit freundlichen Grüßen,  
+Layla Ahmed
+</div>
+<div class="arabic">
+الموضوع: فتح حساب بنكي جديد  
+السادة المحترمون،  
+أود فتح حساب بنكي جديد في مصرفكم لإدارة راتبي الشهري والفواتير.  
+يرجى تزويدي بمعلومات عن أنواع الحسابات المختلفة، الرسوم، خدمات الإنترنت البنكي، والمستندات المطلوبة.  
+كما أود معرفة ما إذا كانت الاستشارة الشخصية ضرورية أم أن فتح الحساب يمكن أن يتم بالكامل أونلاين.  
+سأكون ممتنًا للحصول على إجابة مفصلة لأتمكن من اختيار الخيار المناسب.  
+شكراً جزيلاً مسبقاً.  
+مع أطيب التحيات،  
+ليلى أحمد
+</div>
+</div>
+<!-- 7 -->
+<div class="email">
+<div class="reason">طلب معلومات عن التطوع في جمعية خيرية 🤝</div>
+<div class="german">
+Betreff: Freiwilligenarbeit bei Ihrer Organisation  
+Sehr geehrte Damen und Herren,  
+ich interessiere mich dafür, als Freiwillige in Ihrer Organisation mitzuarbeiten. Ich habe bereits Erfahrung in sozialen Projekten und möchte gerne neue Fähigkeiten lernen sowie anderen Menschen helfen. Können Sie mir bitte mitteilen, welche Möglichkeiten zur Freiwilligenarbeit bestehen, welche Termine verfügbar sind und ob es Schulungen oder Einführungsveranstaltungen für neue Freiwillige gibt? Ich freue mich auf Ihre ausführliche Antwort.  
+Mit freundlichen Grüßen,  
+Samir Nader
+</div>
+<div class="arabic">
+الموضوع: التطوع في جمعيتكم  
+السادة المحترمون،  
+أرغب في التطوع والعمل مع جمعيتكم. لدي خبرة سابقة في مشاريع اجتماعية وأود تعلم مهارات جديدة ومساعدة الآخرين.  
+هل يمكنكم إعلامي عن فرص التطوع المتاحة، المواعيد، وهل هناك دورات تدريبية أو لقاءات تعريفية للمتطوعين الجدد؟  
+أتطلع إلى رد مفصل منكم.  
+مع أطيب التحيات،  
+سمير نادر
+</div>
+</div>
+<!-- 8 -->
+<div class="email">
+<div class="reason">طلب معلومات عن دورة الطهي 🍳</div>
+<div class="german">
+Betreff: Informationen über Kochkurs  
+Sehr geehrte Damen und Herren,  
+ich interessiere mich für Ihren Kochkurs für Anfänger. Ich möchte meine Kochfähigkeiten verbessern und neue Rezepte lernen. Können Sie mir bitte mitteilen, wie lange der Kurs dauert, welche Zutaten zur Verfügung gestellt werden und ob es spezielle Themen wie vegetarisches oder internationales Kochen gibt? Außerdem möchte ich wissen, ob der Kurs an Wochenenden stattfindet und welche Kosten auf mich zukommen. Vielen Dank für Ihre Antwort.  
+Mit freundlichen Grüßen,  
+Hana Karim
+</div>
+<div class="arabic">
+الموضوع: معلومات عن دورة الطهي  
+السادة المحترمون،  
+أهتم بدورة الطهي للمبتدئين. أريد تحسين مهاراتي في الطهي وتعلم وصفات جديدة.  
+هل يمكنكم إعلامي بمدة الدورة، ما هي المكونات المتوفرة، وهل توجد مواضيع خاصة مثل الطهي النباتي أو الدولي؟  
+كما أود معرفة ما إذا كانت الدورة تقام في عطلة نهاية الأسبوع والتكاليف المتوقعة.  
+شكراً جزيلاً على ردكم.  
+مع أطيب التحيات،  
+هنا كريم
+</div>
+</div>
+<!-- 9 -->
+<div class="email">
+<div class="reason">استفسار عن الرحلات السياحية 🗺️</div>
+<div class="german">
+Betreff: Informationen über Stadtführungen  
+Sehr geehrte Damen und Herren,  
+ich plane einen Besuch in Ihrer Stadt und interessiere mich für geführte Stadtbesichtigungen. Können Sie mir bitte mitteilen, welche Touren angeboten werden, wie lange jede Tour dauert, welche Sprachen verfügbar sind und welche Kosten anfallen? Außerdem möchte ich wissen, ob eine vorherige Anmeldung notwendig ist und ob Rabatte für Gruppen oder Familien angeboten werden. Über eine schnelle und ausführliche Antwort würde ich mich sehr freuen.  
+Mit freundlichen Grüßen,  
+Mohamed Khalid
+</div>
+<div class="arabic">
+الموضوع: معلومات عن الجولات السياحية في المدينة  
+السادة المحترمون،  
+أخطط لزيارة مدينتكم وأهتم بالجولات السياحية المصحوبة بمرشدين.  
+هل يمكنكم تزويدي بالمعلومات عن الجولات المتوفرة، مدة كل جولة، اللغات المتاحة، والتكاليف؟  
+كما أود معرفة ما إذا كان الحجز المسبق ضروريًا وهل توجد خصومات للعائلات أو المجموعات.  
+أتطلع إلى رد سريع ومفصل.  
+مع أطيب التحيات،  
+محمد خالد
+</div>
+</div>
+<!-- 10 -->
+<div class="email">
+<div class="reason">طلب معلومات عن التسجيل في نادي رياضي 🏋️</div>
+<div class="german">
+Betreff: Mitgliedschaft im Fitnessstudio  
+Sehr geehrte Damen und Herren,  
+ich möchte Mitglied in Ihrem Fitnessstudio werden und benötige Informationen zu den Mitgliedsbeiträgen, Öffnungszeiten, Kursangeboten und Trainingsmöglichkeiten. Außerdem interessiere ich mich dafür, ob es spezielle Angebote für Studenten oder langfristige Mitgliedschaften gibt. Ich würde auch gerne wissen, ob eine persönliche Beratung oder ein Probetraining vor der Anmeldung möglich ist. Vielen Dank für Ihre ausführliche Antwort im Voraus.  
+Mit freundlichen Grüßen,  
+Layla Ahmed
+</div>
+<div class="arabic">
+الموضوع: التسجيل في النادي الرياضي  
+السادة المحترمون،  
+أود الانضمام إلى ناديكم الرياضي وأحتاج إلى معلومات عن رسوم العضوية، مواعيد العمل، الدورات المتاحة وإمكانيات التدريب.  
+كما أود معرفة ما إذا كانت هناك عروض خاصة للطلاب أو العضويات الطويلة الأمد.  
+كما أود معرفة ما إذا كانت هناك استشارة شخصية أو تجربة تدريب قبل التسجيل.  
+شكراً جزيلاً على ردكم المفصل مسبقاً.  
+مع أطيب التحيات،  
+ليلى أحمد
+</div>
+</div>
 </div>
 <!-- ✨ أوقفت عند الإيميل رقم 10 ✨ -->
 <!-- إذا أعجبك التصميم والاسلوب أكمل لك من 11 حتى 20 -->
