--- a/a1_emails.html
+++ b/a1_emails.html
@@ -550,6 +550,111 @@ Layla Ahmed
 ليلى أحمد
 </div>
 </div>
+<!-- 11 -->
+<div class="email">
+<div class="reason">استفسار عن شروط الإقامة الطويلة الأمد 🇩🇪</div>
+<div class="german">
+Betreff: Informationen zu langfristigem Aufenthalt in Deutschland  
+Sehr geehrte Damen und Herren,  
+ich plane, für ein Jahr nach Deutschland zu ziehen, um dort zu arbeiten und meine Deutschkenntnisse zu vertiefen. Ich würde gerne wissen, welche Arten von Aufenthaltsgenehmigungen für meine Situation infrage kommen und welche Unterlagen dafür erforderlich sind. Außerdem interessiere ich mich dafür, welche Fristen und Gebühren zu beachten sind und ob es spezielle Programme für internationale Fachkräfte gibt. Über eine detaillierte Antwort würde ich mich sehr freuen, damit ich meine Planung entsprechend organisieren kann.  
+Mit freundlichen Grüßen,  
+Ahmed Hassan
+</div>
+<div class="arabic">
+الموضوع: معلومات حول الإقامة الطويلة الأمد في ألمانيا  
+السادة المحترمون،  
+أخطط للانتقال إلى ألمانيا لمدة سنة للعمل وتعميق مهاراتي في اللغة الألمانية.  
+أود معرفة أنواع تصاريح الإقامة المناسبة لحالتي والمستندات المطلوبة لذلك.  
+كما أود معرفة المواعيد النهائية والرسوم التي يجب مراعاتها، وما إذا كانت هناك برامج خاصة للمهنيين الدوليين.  
+سأكون ممتنًا للحصول على رد مفصل لأتمكن من تنظيم خططي بشكل مناسب.  
+مع أطيب التحيات،  
+أحمد حسن
+</div>
+</div>
+<!-- 12 -->
+<div class="email">
+<div class="reason">طلب معلومات عن دراسة في جامعة ألمانية 🎓</div>
+<div class="german">
+Betreff: Studium an einer deutschen Universität  
+Sehr geehrte Damen und Herren,  
+ich interessiere mich für ein Masterstudium an Ihrer Universität im Bereich Umweltwissenschaften. Könnten Sie mir bitte mitteilen, welche Zulassungsvoraussetzungen notwendig sind, welche Bewerbungsfristen bestehen und welche Unterlagen ich einreichen muss? Außerdem würde ich gerne wissen, ob es Stipendienmöglichkeiten für internationale Studierende gibt und wie die Lebenshaltungskosten in der Nähe des Campus sind. Über eine ausführliche Antwort würde ich mich sehr freuen, um meine Bewerbung rechtzeitig vorbereiten zu können.  
+Mit freundlichen Grüßen,  
+Layla Ahmed
+</div>
+<div class="arabic">
+الموضوع: الدراسة في جامعة ألمانية  
+السادة المحترمون،  
+أنا مهتمة بدراسة الماجستير في جامعتكم في مجال علوم البيئة.  
+هل يمكنكم تزويدي بمعلومات عن شروط القبول، المواعيد النهائية للتقديم، والمستندات التي يجب تقديمها؟  
+كما أود معرفة ما إذا كانت هناك فرص منح دراسية للطلاب الدوليين، وما هي تكلفة المعيشة بالقرب من الحرم الجامعي.  
+سأكون ممتنة للحصول على رد مفصل لأتمكن من إعداد طلبي في الوقت المناسب.  
+مع أطيب التحيات،  
+ليلى أحمد
+</div>
+</div>
+<!-- 13 -->
+<div class="email">
+<div class="reason">طلب معلومات عن التأمين الصحي في ألمانيا 🏥</div>
+<div class="german">
+Betreff: Informationen zur Krankenversicherung in Deutschland  
+Sehr geehrte Damen und Herren,  
+ich werde bald nach Deutschland ziehen und möchte mich über die Möglichkeiten der Krankenversicherung informieren. Können Sie mir bitte erklären, welche Versicherungsarten existieren, welche Leistungen abgedeckt sind und welche Kosten auf mich zukommen? Außerdem interessiert mich, ob es Unterschiede zwischen gesetzlicher und privater Versicherung gibt und welche Voraussetzungen für internationale Bewohner gelten. Eine detaillierte Antwort würde mir sehr helfen, um die passende Versicherung für meine Situation auszuwählen.  
+Mit freundlichen Grüßen,  
+Samir Nader
+</div>
+<div class="arabic">
+الموضوع: معلومات حول التأمين الصحي في ألمانيا  
+السادة المحترمون،  
+سوف أنتقل قريباً إلى ألمانيا وأود معرفة خيارات التأمين الصحي المتاحة.  
+هل يمكنكم شرح أنواع التأمين المختلفة، الخدمات المشمولة، والتكاليف المتوقعة؟  
+كما أود معرفة الفروق بين التأمين القانوني والخاص، والشروط المطلوبة للمقيمين الدوليين.  
+رد مفصل منكم سيساعدني على اختيار التأمين الأنسب لحالتي.  
+مع أطيب التحيات،  
+سمير نادر
+</div>
+</div>
+<!-- 14 -->
+<div class="email">
+<div class="reason">استفسار عن تسجيل الأطفال في مدرسة ألمانية 🏫</div>
+<div class="german">
+Betreff: Anmeldung meines Kindes an einer deutschen Schule  
+Sehr geehrte Damen und Herren,  
+ich möchte mein Kind für das kommende Schuljahr an Ihrer Schule anmelden. Bitte informieren Sie mich über die erforderlichen Unterlagen, den Anmeldeprozess und eventuelle Termine für Aufnahmegespräche. Darüber hinaus würde ich gerne wissen, welche Sprachangebote für Kinder mit Deutsch als Zweitsprache bestehen und welche Fördermöglichkeiten für besondere Begabungen oder Lernschwierigkeiten angeboten werden. Eine ausführliche Antwort wäre sehr hilfreich, damit ich alles rechtzeitig vorbereiten kann.  
+Mit freundlichen Grüßen,  
+Hana Karim
+</div>
+<div class="arabic">
+الموضوع: تسجيل طفلي في مدرسة ألمانية  
+السادة المحترمون،  
+أرغب في تسجيل طفلي للعام الدراسي القادم في مدرستكم.  
+يرجى تزويدي بالمستندات المطلوبة، إجراءات التسجيل، والمواعيد المحتملة للمقابلات الشخصية.  
+كما أود معرفة برامج اللغة للأطفال الذين تعتبر الألمانية لغتهم الثانية، وفرص الدعم للمواهب الخاصة أو صعوبات التعلم.  
+رد مفصل سيساعدني على التحضير لكل شيء في الوقت المناسب.  
+مع أطيب التحيات،  
+هنا كريم
+</div>
+</div>
+<!-- 15 -->
+<div class="email">
+<div class="reason">طلب معلومات عن دورة مهنية متقدمة 💼</div>
+<div class="german">
+Betreff: Weiterbildungskurs im Bereich Projektmanagement  
+Sehr geehrte Damen und Herren,  
+ich interessiere mich für Ihren Weiterbildungskurs im Projektmanagement, um meine beruflichen Fähigkeiten zu erweitern. Könnten Sie mir bitte mitteilen, welche Voraussetzungen für die Teilnahme notwendig sind, wie lange der Kurs dauert, welche Themen behandelt werden und welche Zertifikate am Ende vergeben werden? Außerdem interessiert mich, ob der Kurs berufsbegleitend durchgeführt wird und welche Kosten anfallen. Eine ausführliche Antwort würde mir helfen, meine Planung entsprechend anzupassen.  
+Mit freundlichen Grüßen,  
+Mohamed Khalid
+</div>
+<div class="arabic">
+الموضوع: دورة تدريبية متقدمة في إدارة المشاريع  
+السادة المحترمون،  
+أهتم بالدورة التدريبية في مجال إدارة المشاريع لتطوير مهاراتي المهنية.  
+هل يمكنكم تزويدي بشروط المشاركة، مدة الدورة، المواضيع التي ستتم تغطيتها، والشهادات التي تمنح في النهاية؟  
+كما أود معرفة ما إذا كانت الدورة تُجرى بالتوازي مع العمل وما هي التكاليف.  
+رد مفصل سيساعدني على تنظيم خططي بشكل مناسب.  
+مع أطيب التحيات،  
+محمد خالد
+</div>
+</div>
 </div>
 <!-- ✨ أوقفت عند الإيميل رقم 10 ✨ -->
 <!-- إذا أعجبك التصميم والاسلوب أكمل لك من 11 حتى 20 -->
