--- a/a1_emails.html
+++ b/a1_emails.html
@@ -655,6 +655,131 @@ Mohamed Khalid
 محمد خالد
 </div>
 </div>
+<!-- 16 -->
+<div class="email">
+<div class="reason">طلب إصلاح نافذة مكسورة 🪟</div>
+<div class="german">
+Betreff: Reparatur der kaputten Fenster in meiner Wohnung  
+Sehr geehrte Damen und Herren,  
+seit gestern ist eines der Fenster in meinem Wohnzimmer beschädigt. Es lässt sich nicht richtig schließen und es zieht stark, besonders bei kaltem Wetter. Ich möchte Sie bitten, so bald wie möglich einen Handwerker zu schicken, um das Fenster zu reparieren. Bitte teilen Sie mir auch mit, ob ich während der Reparatur anwesend sein muss oder ob der Handwerker alleine arbeiten kann. Vielen Dank für Ihre schnelle Rückmeldung.  
+Mit freundlichen Grüßen,  
+Ahmed Hassan
+</div>
+<div class="arabic">
+الموضوع: إصلاح النافذة المكسورة في شقتي  
+السادة المحترمون،  
+منذ الأمس، واحدة من نوافذ غرفة المعيشة في شقتي تالفة. لا تغلق بشكل صحيح وهناك تيار هواء قوي، خاصة في الطقس البارد.  
+أود طلب إرسال فني في أقرب وقت ممكن لإصلاح النافذة.  
+يرجى إعلامي إذا كنت بحاجة للتواجد أثناء الإصلاح أم يمكن للفني العمل بمفرده.  
+شكراً جزيلاً على ردكم السريع.  
+مع أطيب التحيات،  
+أحمد حسن
+</div>
+</div>
+<!-- 17 -->
+<div class="email">
+<div class="reason">استفسار عن تجديد عقد الإيجار 📝</div>
+<div class="german">
+Betreff: Verlängerung meines Mietvertrags  
+Sehr geehrte Damen und Herren,  
+mein Mietvertrag für die Wohnung in der Musterstraße 12 läuft in zwei Monaten aus. Ich möchte gerne wissen, ob eine Verlängerung möglich ist und unter welchen Bedingungen. Außerdem würde ich gerne Informationen über mögliche Mietanpassungen oder neue Vereinbarungen erhalten. Bitte teilen Sie mir mit, welche Schritte ich unternehmen muss, um den Vertrag rechtzeitig zu verlängern.  
+Vielen Dank im Voraus.  
+Mit freundlichen Grüßen,  
+Layla Ahmed
+</div>
+<div class="arabic">
+الموضوع: تجديد عقد الإيجار  
+السادة المحترمون،  
+عقد إيجاري للشقة في شارع موستر رقم 12 سينتهي خلال شهرين. أود معرفة ما إذا كان من الممكن تجديد العقد وما هي الشروط.  
+كما أود الحصول على معلومات حول أي تعديلات محتملة على الإيجار أو اتفاقيات جديدة.  
+يرجى إعلامي بالخطوات اللازمة لتجديد العقد في الوقت المناسب.  
+شكراً جزيلاً مسبقاً.  
+مع أطيب التحيات،  
+ليلى أحمد
+</div>
+</div>
+<!-- 18 -->
+<div class="email">
+<div class="reason">طلب معلومات عن تنظيم مؤتمر 📅</div>
+<div class="german">
+Betreff: Informationen zur Organisation einer Konferenz  
+Sehr geehrte Damen und Herren,  
+ich plane eine Konferenz zum Thema Umwelttechnologien in Ihrem Tagungszentrum und möchte Informationen über verfügbare Räume, technische Ausstattung, Catering und Übernachtungsmöglichkeiten erhalten. Außerdem interessiert mich, welche Kapazitäten die Räume haben und ob es besondere Angebote für mehrtägige Veranstaltungen gibt. Eine detaillierte Antwort würde mir helfen, die Veranstaltung effizient zu planen.  
+Mit freundlichen Grüßen,  
+Samir Nader
+</div>
+<div class="arabic">
+الموضوع: معلومات حول تنظيم مؤتمر  
+السادة المحترمون،  
+أخطط لعقد مؤتمر حول تقنيات البيئة في مركز المؤتمرات الخاص بكم وأود الحصول على معلومات حول الغرف المتاحة، المعدات التقنية، خدمات الطعام، وإمكانيات الإقامة.  
+كما أود معرفة سعة الغرف وهل هناك عروض خاصة للفعاليات متعددة الأيام.  
+رد مفصل سيساعدني على تنظيم الحدث بكفاءة.  
+مع أطيب التحيات،  
+سمير نادر
+</div>
+</div>
+<!-- 19 -->
+<div class="email">
+<div class="reason">استفسار عن التسجيل في دورة تعليم قيادة 🚗</div>
+<div class="german">
+Betreff: Anmeldung zum Führerscheinkurs  
+Sehr geehrte Damen und Herren,  
+ich möchte mich für einen Führerscheinkurs anmelden und benötige Informationen über Kurszeiten, Dauer, Kosten und theoretische sowie praktische Prüfungen. Außerdem interessiert mich, welche Unterlagen ich vor Kursbeginn einreichen muss und ob es flexible Kursoptionen für Berufstätige gibt. Über eine ausführliche Antwort würde ich mich sehr freuen, damit ich meine Teilnahme rechtzeitig planen kann.  
+Mit freundlichen Grüßen,  
+Hana Karim
+</div>
+<div class="arabic">
+الموضوع: التسجيل في دورة تعليم القيادة  
+السادة المحترمون،  
+أرغب بالتسجيل في دورة للحصول على رخصة القيادة وأحتاج معلومات حول مواعيد الدورة، مدتها، التكاليف، والاختبارات النظرية والعملية.  
+كما أود معرفة المستندات التي يجب تقديمها قبل بدء الدورة وهل توجد خيارات مرنة للموظفين.  
+سأكون ممتنة للحصول على رد مفصل لتخطيط حضوري في الوقت المناسب.  
+مع أطيب التحيات،  
+هنا كريم
+</div>
+</div>
+<!-- 20 -->
+<div class="email">
+<div class="reason">طلب معلومات عن الاشتراك في نادي رياضي متخصص 🏋️‍♂️</div>
+<div class="german">
+Betreff: Mitgliedschaft im spezialisierten Fitnessstudio  
+Sehr geehrte Damen und Herren,  
+ich interessiere mich für eine Mitgliedschaft in Ihrem Fitnessstudio mit Schwerpunkt Krafttraining und Functional Fitness. Bitte informieren Sie mich über die Mitgliedsbeiträge, Öffnungszeiten, Kursangebote und Personal Training. Außerdem möchte ich wissen, ob es spezielle Programme für Anfänger und Fortgeschrittene gibt und welche Vertragslaufzeiten möglich sind. Eine ausführliche Antwort würde mir sehr helfen, die richtige Entscheidung zu treffen.  
+Mit freundlichen Grüßen,  
+Mohamed Khalid
+</div>
+<div class="arabic">
+الموضوع: الاشتراك في نادي رياضي متخصص  
+السادة المحترمون،  
+أرغب في الاشتراك في ناديكم الرياضي الذي يركز على تدريب القوة واللياقة الوظيفية.  
+يرجى تزويدي بمعلومات عن رسوم العضوية، أوقات العمل، الدورات المتاحة، والتدريب الشخصي.  
+كما أود معرفة ما إذا كانت هناك برامج خاصة للمبتدئين والمتقدمين وما هي مدة العقود الممكنة.  
+رد مفصل سيساعدني على اتخاذ القرار الصحيح.  
+مع أطيب التحيات،  
+محمد خالد
+</div>
+</div>
+<!-- 21 -->
+<div class="email">
+<div class="reason">استفسار عن دورة تدريبية متقدمة في البرمجة 💻</div>
+<div class="german">
+Betreff: Weiterbildungskurs im Bereich Programmierung  
+Sehr geehrte Damen und Herren,  
+ich interessiere mich für Ihren fortgeschrittenen Kurs in Programmierung, insbesondere in den Bereichen Webentwicklung und Datenbanken. Bitte senden Sie mir Informationen zu Kursdauer, Inhalten, Unterrichtsmethoden, Kosten und möglichen Zertifikaten. Außerdem möchte ich wissen, ob der Kurs berufsbegleitend oder online durchgeführt wird und wie viele Teilnehmer maximal zugelassen sind. Eine ausführliche Antwort würde mir sehr helfen, meine Entscheidung zu treffen.  
+Mit freundlichen Grüßen,  
+Ali Mustafa
+</div>
+<div class="arabic">
+الموضوع: دورة تدريبية متقدمة في البرمجة  
+السادة المحترمون،  
+أهتم بدورتكم المتقدمة في البرمجة، خصوصاً في مجالات تطوير الويب وقواعد البيانات.  
+يرجى تزويدي بمعلومات عن مدة الدورة، المحتوى، أسلوب التدريس، التكاليف والشهادات المتاحة.  
+كما أود معرفة ما إذا كانت الدورة يمكن حضورها بالتوازي مع العمل أو أونلاين، وعدد المشاركين المسموح به.  
+رد مفصل سيساعدني على اتخاذ القرار المناسب.  
+مع أطيب التحيات،  
+علي مصطفى
+</div>
+</div>
 </div>
 <!-- ✨ أوقفت عند الإيميل رقم 10 ✨ -->
 <!-- إذا أعجبك التصميم والاسلوب أكمل لك من 11 حتى 20 -->
