--- a/a1_emails.html
+++ b/a1_emails.html
@@ -780,6 +780,108 @@ Ali Mustafa
 علي مصطفى
 </div>
 </div>
+<!-- 22 -->
+<div class="email">
+<div class="reason">طلب تقديم مشروع بحثي في جامعة ألمانية 📑</div>
+<div class="german">
+Betreff: Einreichung eines Forschungsprojekts  
+Sehr geehrte Damen und Herren,  
+im Rahmen meines Masterstudiums plane ich die Einreichung eines Forschungsprojekts zum Thema nachhaltige Energieversorgung. Ich möchte Sie bitten, mir detaillierte Informationen über die Anforderungen, den formalen Ablauf der Einreichung, mögliche Betreuer und Fristen zur Verfügung zu stellen. Darüber hinaus interessiert mich, ob es Richtlinien für die Zusammenarbeit mit externen Forschungseinrichtungen gibt und welche Bewertungskriterien bei der Auswahl der Projekte angewendet werden. Ich wäre Ihnen sehr dankbar für eine ausführliche Antwort, um meine Planung effizient gestalten zu können.  
+Mit freundlichen Grüßen,  
+Ahmed Hassan
+</div>
+<div class="arabic">
+الموضوع: تقديم مشروع بحثي  
+السادة المحترمون،  
+في إطار دراسة الماجستير الخاصة بي، أخطط لتقديم مشروع بحث حول موضوع الطاقة المستدامة.  
+أود طلب تزويدي بمعلومات مفصلة عن المتطلبات، الإجراءات الرسمية لتقديم المشروع، المشرفين المحتملين، والمواعيد النهائية.  
+كما أود معرفة ما إذا كانت هناك إرشادات للتعاون مع مؤسسات بحثية خارجية وما هي معايير التقييم المستخدمة لاختيار المشاريع.  
+سأكون ممتنًا جدًا للحصول على رد مفصل لأتمكن من تنظيم خططي بكفاءة.  
+مع أطيب التحيات،  
+أحمد حسن
+</div>
+</div>
+<!-- 23 -->
+<div class="email">
+<div class="reason">طلب تمويل لمبادرة اجتماعية 🌍</div>
+<div class="german">
+Betreff: Antrag auf Finanzierung einer sozialen Initiative  
+Sehr geehrte Damen und Herren,  
+ich plane die Umsetzung einer sozialen Initiative zur Förderung von Integration und Bildung von Jugendlichen mit Migrationshintergrund. Um dieses Projekt realisieren zu können, benötige ich finanzielle Unterstützung. Könnten Sie mir bitte mitteilen, welche Fördermöglichkeiten bestehen, welche Unterlagen erforderlich sind und welche Kriterien für die Bewilligung von Zuschüssen angewendet werden? Über eine umfassende Antwort würde ich mich sehr freuen, um die nächsten Schritte sorgfältig planen zu können.  
+Mit freundlichen Grüßen,  
+Layla Ahmed
+</div>
+<div class="arabic">
+الموضوع: طلب تمويل لمبادرة اجتماعية  
+السادة المحترمون،  
+أخطط لتنفيذ مبادرة اجتماعية تهدف إلى تعزيز اندماج الشباب من خلفيات مهاجرة والتعليم لديهم.  
+لتنفيذ هذا المشروع، أحتاج إلى دعم مالي.  
+هل يمكنكم إعلامي بفرص التمويل المتاحة، المستندات المطلوبة، ومعايير الموافقة على المنح؟  
+سأكون ممتنة جدًا للحصول على رد شامل لأتمكن من تخطيط الخطوات التالية بعناية.  
+مع أطيب التحيات،  
+ليلى أحمد
+</div>
+</div>
+<!-- 24 -->
+<div class="email">
+<div class="reason">استفسار قانوني حول عقد عمل دولي ⚖️</div>
+<div class="german">
+Betreff: Rechtliche Beratung zu einem internationalen Arbeitsvertrag  
+Sehr geehrte Damen und Herren,  
+ich habe ein Angebot für eine Anstellung bei einem internationalen Unternehmen erhalten und möchte vor Unterzeichnung des Arbeitsvertrags rechtliche Beratung einholen. Könnten Sie mir bitte erläutern, welche Punkte besonders beachtet werden sollten, welche Rechte und Pflichten sich aus dem Vertrag ergeben und welche Regelungen bezüglich Steuern, Sozialversicherung und Kündigungsfristen gelten? Eine detaillierte Antwort würde mir sehr helfen, um eine fundierte Entscheidung treffen zu können.  
+Mit freundlichen Grüßen,  
+Samir Nader
+</div>
+<div class="arabic">
+الموضوع: استشارة قانونية حول عقد عمل دولي  
+السادة المحترمون،  
+تلقيت عرض عمل من شركة دولية وأود الحصول على استشارة قانونية قبل توقيع العقد.  
+هل يمكنكم شرح النقاط التي يجب الانتباه إليها، الحقوق والواجبات الناتجة عن العقد، والقوانين المتعلقة بالضرائب، التأمينات الاجتماعية وفترات الإنهاء؟  
+رد مفصل سيساعدني على اتخاذ قرار مستنير.  
+مع أطيب التحيات،  
+سمير نادر
+</div>
+</div>
+<!-- 25 -->
+<div class="email">
+<div class="reason">طلب استشارة حول مشروع ريادي مبتكر 💡</div>
+<div class="german">
+Betreff: Beratung für ein innovatives Start-up-Projekt  
+Sehr geehrte Damen und Herren,  
+ich plane die Gründung eines Start-ups im Bereich nachhaltige Mobilität und möchte professionelle Beratung zu Finanzierungsmöglichkeiten, rechtlichen Aspekten und strategischer Planung erhalten. Könnten Sie mir bitte erläutern, welche Schritte erforderlich sind, um Investoren zu gewinnen, welche rechtlichen Voraussetzungen zu erfüllen sind und welche Marktanalysen sinnvoll sind? Eine ausführliche Antwort würde mir sehr helfen, die nächsten Schritte effizient zu planen.  
+Mit freundlichen Grüßen,  
+Hana Karim
+</div>
+<div class="arabic">
+الموضوع: استشارة حول مشروع ريادي مبتكر  
+السادة المحترمون،  
+أخطط لتأسيس شركة ناشئة في مجال التنقل المستدام وأرغب في الحصول على استشارة مهنية حول فرص التمويل، الجوانب القانونية، والتخطيط الاستراتيجي.  
+هل يمكنكم شرح الخطوات اللازمة لجذب المستثمرين، الشروط القانونية المطلوبة، وأهم التحليلات السوقية المناسبة؟  
+رد مفصل سيساعدني على تخطيط الخطوات التالية بكفاءة.  
+مع أطيب التحيات،  
+هنا كريم
+</div>
+</div>
+<!-- 26 -->
+<div class="email">
+<div class="reason">طلب معلومات حول الابتكار في التعليم الرقمي 📱</div>
+<div class="german">
+Betreff: Anfrage zu Innovationen im digitalen Bildungsbereich  
+Sehr geehrte Damen und Herren,  
+ich interessiere mich für aktuelle Projekte und Best Practices im Bereich digitales Lernen und Bildungsinnovationen. Könnten Sie mir bitte Informationen über Ihre laufenden Programme, Forschungsergebnisse, verwendete Technologien und Kooperationsmöglichkeiten mit Schulen und Universitäten zukommen lassen? Über eine ausführliche Antwort würde ich mich sehr freuen, da ich plane, eigene Projekte im Bereich digitaler Bildung zu entwickeln und umzusetzen.  
+Mit freundlichen Grüßen,  
+Mohamed Khalid
+</div>
+<div class="arabic">
+الموضوع: طلب معلومات حول الابتكار في التعليم الرقمي  
+السادة المحترمون،  
+أنا مهتم بالمشاريع الحالية وأفضل الممارسات في مجال التعلم الرقمي والابتكار التعليمي.  
+هل يمكنكم تزويدي بمعلومات حول برامجكم الحالية، نتائج الأبحاث، التقنيات المستخدمة، وفرص التعاون مع المدارس والجامعات؟  
+سأكون ممتنًا جدًا لرد مفصل لأنني أخطط لتطوير وتنفيذ مشاريع خاصة في مجال التعليم الرقمي.  
+مع أطيب التحيات،  
+محمد خالد
+</div>
+</div>
 </div>
 <!-- ✨ أوقفت عند الإيميل رقم 10 ✨ -->
 <!-- إذا أعجبك التصميم والاسلوب أكمل لك من 11 حتى 20 -->
