--- a/a1_emails.html
+++ b/a1_emails.html
@@ -882,6 +882,110 @@ Mohamed Khalid
 محمد خالد
 </div>
 </div>
+<!-- 27 -->
+<div class="email">
+<div class="reason">طلب استشارة حول السياسات البيئية للشركة 🌱</div>
+<div class="german">
+Betreff: Anfrage zu Umwelt- und Nachhaltigkeitspolitik  
+Sehr geehrte Damen und Herren,  
+ich interessiere mich für die Umwelt- und Nachhaltigkeitspolitik Ihres Unternehmens. Könnten Sie mir bitte detaillierte Informationen zu Ihren Maßnahmen zur CO2-Reduktion, nachhaltigen Lieferketten und Recyclingstrategien zukommen lassen? Darüber hinaus möchte ich wissen, ob Sie Partnerschaften mit externen Umweltorganisationen pflegen und welche langfristigen Ziele Ihr Unternehmen im Bereich Nachhaltigkeit verfolgt. Eine ausführliche Antwort würde mir helfen, Ihre Firmenpolitik besser zu verstehen und mögliche Kooperationsmöglichkeiten zu evaluieren.  
+Mit freundlichen Grüßen,  
+Ahmed Hassan
+</div>
+<div class="arabic">
+الموضوع: استفسار حول السياسات البيئية والاستدامة  
+السادة المحترمون،  
+أنا مهتم بسياسات البيئة والاستدامة في شركتكم.  
+هل يمكنكم تزويدي بمعلومات مفصلة حول إجراءات تقليل ثاني أكسيد الكربون، سلاسل التوريد المستدامة واستراتيجيات إعادة التدوير؟  
+كما أود معرفة ما إذا كنتم تتعاونون مع منظمات بيئية خارجية وما هي أهداف الشركة طويلة المدى في مجال الاستدامة.  
+رد مفصل سيساعدني على فهم سياسة الشركة بشكل أفضل وتقييم فرص التعاون المحتملة.  
+مع أطيب التحيات،  
+أحمد حسن
+</div>
+</div>
+<!-- 28 -->
+<div class="email">
+<div class="reason">استفسار حول الابتكار في الذكاء الاصطناعي 🤖</div>
+<div class="german">
+Betreff: Informationen zu Innovationen im Bereich Künstliche Intelligenz  
+Sehr geehrte Damen und Herren,  
+ich bin daran interessiert, aktuelle Entwicklungen und Innovationen im Bereich Künstliche Intelligenz zu verfolgen. Könnten Sie mir bitte Informationen zu Ihren Forschungsprojekten, Kooperationen mit Universitäten und Unternehmen sowie zu angewandten Technologien zur Verfügung stellen? Außerdem interessiert mich, ob Sie Fortbildungsprogramme für Fachkräfte anbieten und welche zukünftigen Trends Sie in diesem Bereich sehen. Eine ausführliche Antwort würde mir sehr helfen, um mögliche Partnerschaften zu evaluieren.  
+Mit freundlichen Grüßen,  
+Layla Ahmed
+</div>
+<div class="arabic">
+الموضوع: استفسار حول الابتكار في الذكاء الاصطناعي  
+السادة المحترمون،  
+أنا مهتم بمتابعة التطورات والابتكارات الحالية في مجال الذكاء الاصطناعي.  
+هل يمكنكم تزويدي بمعلومات حول مشاريعكم البحثية، التعاون مع الجامعات والشركات، والتقنيات المستخدمة؟  
+كما أود معرفة ما إذا كنتم تقدمون برامج تدريبية للمتخصصين وما هي التوجهات المستقبلية في هذا المجال.  
+رد مفصل سيساعدني على تقييم فرص الشراكة المحتملة.  
+مع أطيب التحيات،  
+ليلى أحمد
+</div>
+</div>
+<!-- 29 -->
+<div class="email">
+<div class="reason">طلب معلومات حول برامج التدريب الدولي 🌐</div>
+<div class="german">
+Betreff: Informationen zu internationalen Trainingsprogrammen  
+Sehr geehrte Damen und Herren,  
+ich interessiere mich für Ihre internationalen Trainingsprogramme im Bereich Management und Leadership. Könnten Sie mir bitte Informationen über die Inhalte, Dauer, Zielgruppen und Teilnahmevoraussetzungen zusenden? Außerdem möchte ich wissen, ob es Möglichkeiten für Online-Teilnahme gibt und welche Zertifikate nach Abschluss vergeben werden. Eine detaillierte Antwort würde mir helfen, die geeigneten Programme für meine berufliche Weiterentwicklung auszuwählen.  
+Mit freundlichen Grüßen,  
+Samir Nader
+</div>
+<div class="arabic">
+الموضوع: طلب معلومات حول برامج التدريب الدولي  
+السادة المحترمون،  
+أنا مهتم ببرامجكم التدريبية الدولية في مجال الإدارة والقيادة.  
+هل يمكنكم تزويدي بمعلومات عن المحتوى، المدة، الفئات المستهدفة ومتطلبات المشاركة؟  
+كما أود معرفة ما إذا كانت هناك خيارات للمشاركة أونلاين وما هي الشهادات التي تمنح بعد الانتهاء.  
+رد مفصل سيساعدني على اختيار البرامج المناسبة لتطوير مهاراتي المهنية.  
+مع أطيب التحيات،  
+سمير نادر
+</div>
+</div>
+<!-- 30 -->
+<div class="email">
+<div class="reason">استفسار حول المشاركة في مؤتمر دولي 📊</div>
+<div class="german">
+Betreff: Teilnahme an einer internationalen Konferenz  
+Sehr geehrte Damen und Herren,  
+ich plane die Teilnahme an Ihrer internationalen Konferenz zum Thema nachhaltige Technologien. Könnten Sie mir bitte mitteilen, welche Voraussetzungen für die Registrierung gelten, welche Workshops angeboten werden, welche Vortragenden teilnehmen und welche zusätzlichen Programmpunkte vorgesehen sind? Außerdem interessiert mich, ob es Möglichkeiten für Networking und Kooperationen gibt und wie hoch die Teilnahmegebühren sind. Eine ausführliche Antwort wäre sehr hilfreich für meine Planung.  
+Mit freundlichen Grüßen,  
+Hana Karim
+</div>
+<div class="arabic">
+الموضوع: استفسار حول المشاركة في مؤتمر دولي  
+السادة المحترمون،  
+أخطط للمشاركة في مؤتمر دولي حول التقنيات المستدامة.  
+هل يمكنكم تزويدي بمعلومات حول شروط التسجيل، الورش المتاحة، المتحدثين المشاركين، والأنشطة الإضافية المخطط لها؟  
+كما أود معرفة ما إذا كانت هناك فرص للتواصل والشراكات، وما هي رسوم المشاركة.  
+رد مفصل سيكون مفيداً جداً لتخطيط مشاركتي.  
+مع أطيب التحيات،  
+هنا كريم
+</div>
+</div>
+<!-- 31 -->
+<div class="email">
+<div class="reason">طلب استشارة حول التطوير المهني الدولي 🌎</div>
+<div class="german">
+Betreff: Beratung zur internationalen beruflichen Entwicklung  
+Sehr geehrte Damen und Herren,  
+ich plane eine berufliche Weiterentwicklung im internationalen Umfeld und möchte Informationen zu Fortbildungsmöglichkeiten, Zertifizierungen, Mentoring-Programmen und beruflichen Netzwerken erhalten. Könnten Sie mir bitte erläutern, welche Programme besonders geeignet sind, welche Voraussetzungen erfüllt werden müssen und wie der Bewerbungsprozess gestaltet ist? Eine ausführliche Antwort würde mir sehr helfen, meine nächsten Schritte strategisch zu planen und meine Karriereziele effizient zu verfolgen.  
+Mit freundlichen Grüßen,  
+Mohamed Khalid
+</div>
+<div class="arabic">
+الموضوع: استشارة حول التطوير المهني الدولي  
+السادة المحترمون،  
+أخطط لتطوير مهني في بيئة دولية وأود الحصول على معلومات حول فرص التدريب، الشهادات، برامج التوجيه، والشبكات المهنية.  
+هل يمكنكم توضيح البرامج الأكثر ملاءمة، الشروط المطلوبة، وإجراءات التقديم؟  
+رد مفصل سيساعدني على تخطيط الخطوات القادمة بشكل استراتيجي وتحقيق أهدافي المهنية بكفاءة.  
+مع أطيب التحيات،  
+محمد خالد
+</div>
+</div>
 </div>
 <!-- ✨ أوقفت عند الإيميل رقم 10 ✨ -->
 <!-- إذا أعجبك التصميم والاسلوب أكمل لك من 11 حتى 20 -->
