--- a/a1_emails.html
+++ b/a1_emails.html
@@ -356,6 +356,111 @@ Ahmed Hassan
 مع أطيب التحيات،  
 أحمد حسن
 </div>
+<!-- 1 B1 -->
+<div class="email">
+<div class="reason">شكوى عن تسرب مياه في الشقة 💧</div>
+<div class="german">
+Betreff: Wasserschaden in meiner Wohnung  
+Sehr geehrte Damen und Herren,  
+seit gestern tropft Wasser von der Decke in meinem Wohnzimmer. Das verursacht Schäden an Möbeln und Boden. Bitte schicken Sie so schnell wie möglich einen Handwerker, um das Problem zu beheben.  
+Vielen Dank für Ihre schnelle Hilfe.  
+Mit freundlichen Grüßen,  
+Omar Saleh
+</div>
+<div class="arabic">
+الموضوع: تسرب مياه في شقتي  
+السادة الأعزاء،  
+منذ أمس، هناك تسرب مياه من السقف في غرفة المعيشة. هذا يسبب تلفًا في الأثاث والأرضية.  
+يرجى إرسال فني في أقرب وقت ممكن لإصلاح المشكلة.  
+شكراً جزيلاً على مساعدتكم السريعة.  
+مع أطيب التحيات،  
+عمر صالح
+</div>
+</div>
+<!-- 2 B1 -->
+<div class="email">
+<div class="reason">طلب موعد عند طبيب الأسنان 🦷</div>
+<div class="german">
+Betreff: Zahnarzttermin  
+Sehr geehrte Frau Doktor,  
+ich habe starke Zahnschmerzen und möchte einen Termin bei Ihnen vereinbaren. Bitte teilen Sie mir mit, wann der nächste freie Termin verfügbar ist.  
+Vielen Dank im Voraus.  
+Mit freundlichen Grüßen,  
+Layla Ahmed
+</div>
+<div class="arabic">
+الموضوع: موعد عند طبيب الأسنان  
+السيدة الدكتورة المحترمة،  
+لدي ألم شديد في الأسنان وأود تحديد موعد عندكم.  
+يرجى إعلامي متى يكون أقرب موعد متاح.  
+شكراً جزيلاً مسبقًا.  
+مع أطيب التحيات،  
+ليلى أحمد
+</div>
+</div>
+<!-- 3 B1 -->
+<div class="email">
+<div class="reason">حجز تذكرة لحفل موسيقي 🎶</div>
+<div class="german">
+Betreff: Ticketreservierung für ein Konzert  
+Sehr geehrte Damen und Herren,  
+ich möchte zwei Tickets für das Konzert am kommenden Freitag reservieren. Können Sie mir bitte mitteilen, ob noch Plätze verfügbar sind und wie ich die Tickets bezahlen kann?  
+Vielen Dank für Ihre Antwort.  
+Mit freundlichen Grüßen,  
+Hana Karim
+</div>
+<div class="arabic">
+الموضوع: حجز تذكرة لحفل موسيقي  
+السادة الأعزاء،  
+أود حجز تذكرتين لحفل يوم الجمعة القادم.  
+هل يمكنكم إعلامي إذا كانت هناك مقاعد متاحة وكيف يمكنني دفع التذاكر؟  
+شكراً جزيلاً على ردكم.  
+مع أطيب التحيات،  
+هنا كريم
+</div>
+</div>
+<!-- 4 B1 -->
+<div class="email">
+<div class="reason">استفسار عن أوقات الحافلة 🚌</div>
+<div class="german">
+Betreff: Busfahrzeiten  
+Sehr geehrte Damen und Herren,  
+können Sie mir bitte die Abfahrtszeiten des Busses von Berlin nach Potsdam am Wochenende mitteilen? Ich möchte meine Reise planen und wissen, wann die Busse fahren.  
+Vielen Dank im Voraus.  
+Mit freundlichen Grüßen,  
+Samir Nader
+</div>
+<div class="arabic">
+الموضوع: أوقات الحافلة  
+السادة الأعزاء،  
+هل يمكنكم تزويدي بمواعيد انطلاق الحافلة من برلين إلى بوتسدام في عطلة نهاية الأسبوع؟  
+أود التخطيط لرحلتي ومعرفة أوقات الحافلات.  
+شكراً جزيلاً مسبقًا.  
+مع أطيب التحيات،  
+سمير نادر
+</div>
+</div>
+<!-- 5 B1 -->
+<div class="email">
+<div class="reason">طلب معلومات عن مطعم محلي 🍽️</div>
+<div class="german">
+Betreff: Informationen über das Restaurant  
+Sehr geehrtes Restaurant-Team,  
+ich möchte mit meiner Familie am Samstagabend zu Ihnen kommen. Können Sie mir bitte sagen, ob noch ein Tisch für vier Personen frei ist und ob man vorher reservieren muss?  
+Vielen Dank für Ihre Antwort.  
+Mit freundlichen Grüßen,  
+Mohamed Khalid
+</div>
+<div class="arabic">
+الموضوع: معلومات عن المطعم  
+فريق المطعم المحترم،  
+أود الحضور مع عائلتي يوم السبت مساءً.  
+هل يمكنكم إعلامي إذا كان هناك طاولة متاحة لأربعة أشخاص وهل يجب الحجز مسبقًا؟  
+شكراً جزيلاً على ردكم.  
+مع أطيب التحيات،  
+محمد خالد
+</div>
+</div>
 </div>
 <!-- 2 -->
 <div class="email">
