--- a/a1_emails.html
+++ b/a1_emails.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Deutsch A1 - E-Mails</title>
+<title>Deutsch  - E-Mails</title>
 <style>
    body {
      font-family: Arial, sans-serif;
@@ -48,7 +48,7 @@
 </style>
 </head>
 <body>
-<h1>📧 E-Mails A1 – مستوى A1</h1>
+<h1>📧 E-Mails – مستوى A1_A2_B1_B2_C1_C2 </h1>
 <!-- 1 -->
 <div class="email">
 <div class="reason">تهنئة صديق بعيد ميلاده 🎂</div>
