--- a/a1_emails.html
+++ b/a1_emails.html
@@ -1219,7 +1219,7 @@ Ali Mustafa
 </div>
 </div>
 </div>
-<!-- ✨ أوقفت عند الإيميل رقم 10 ✨ -->
+<a href="index.html">🔙 رجوع للصفحة الرئيسية</a>
 <!-- إذا أعجبك التصميم والاسلوب أكمل لك من 11 حتى 20 -->
 </body>
 </html>
