--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </div>
 <div class="section">
 <div class="section-icon">✍️</div>
-<a href="examples.html">أمثلة</a>
+<a href="examples.html">كلمات مع امثلة</a>
 </div>
 <div class="section">
 <div class="section-icon">📧</div>
@@ -104,6 +104,7 @@
 </main>
 </body>
 </html>
+
 
 
 
